--- a/app/assets/sass/comfortable_mexican_sofa/base.css.sass
+++ b/app/assets/sass/comfortable_mexican_sofa/base.css.sass
@@ -177,6 +177,7 @@ body#coruscope
   // -- Sofa Version --------------------------------------------------------
   .body-wrapper
     position: relative
+    padding-bottom: 35px
   .body-wrapper .body-footer
     position: absolute
     background: $dark_2nd
