- added group as folder selection in file & snippet forms - added pretty image previews within fancytree labels

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -32,6 +32,20 @@
   }
 
 #coruscope
+    .fancytree-container
+        .fancytree-node {
+            position: relative;
+}
+        img.fullsize {
+            position: absolute;
+            left: -26px;
+            top: 2px;
+            width: auto !important;
+            height: auto;
+            max-height: 18px;
+}
+
+#coruscope
   textarea.CodeMirror {
     resize: both;
 }
@@ -96,6 +110,12 @@ form.formatted
     }
     .files {
         margin-top: 0.3em;
+    }
+    img.image-preview {
+        width: auto;
+        height: auto;
+        max-width: 640px;
+        max-height: 640px;
     }
 }
 
