modal dialog for image selection via fancytree, and orientation & resolution selection - changed naming of cms_content and cms_thumb sizes to resized and thumb for Cms::File

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -31,6 +31,8 @@
       min-height: 610px;
   }
 
+
+/* Fancytree Dialogs */
 #coruscope
     .fancytree-container
         .fancytree-node {
@@ -44,6 +46,23 @@
             height: auto;
             max-height: 18px;
 }
+
+.bootstrap-wysihtml5-insert-image-modal
+    .image_chooser {
+        max-height: 240px;
+        overflow-y: auto;
+        .fancytree-lastsib {
+            display: none;
+        }
+}
+    .image_chooser_preview {
+        max-height: 240px;
+        max-width: 480px;
+        margin: 0 auto;
+    }
+    .image_orientation_select {
+        max-width: 50%;
+    }
 
 #coruscope
   textarea.CodeMirror {
