--- a/app/views/admin/cms/files/_form.html.haml
+++ b/app/views/admin/cms/files/_form.html.haml
@@ -11,7 +11,7 @@
     = link_to @file.file.url, @file.file.url, :target => '_blank'
 
 = content_for_ajax :meta_pane do
-  = comfy_form_for @file, as: :file, url: { action: :update}, type: :vertical do |metaform|
+  = comfy_form_for @file, as: :file, url: { action: @file.new_record? ? :create : :update}, type: :vertical do |metaform|
     = render :partial => 'admin/cms/categories/form', :object => metaform
     = form.text_area :description, cols: 8
     - unless @file.new_record?
