enable fancytree chooser selection of sub-nodes

--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -51,7 +51,7 @@
     .image_chooser {
         max-height: 240px;
         overflow-y: auto;
-        .fancytree-lastsib {
+        > ul > li > .fancytree-lastsib {
             display: none;
         }
 }
