styles for image chooser modal and stylesheet inclusion (needs to be parametrized better per site!!)

--- a/app/assets/javascripts/comfortable_mexican_sofa/application.js.coffee.erb
+++ b/app/assets/javascripts/comfortable_mexican_sofa/application.js.coffee.erb
@@ -57,7 +57,7 @@ window.CMS.wysiwyg = ->
     $(element).wysihtml5
       html:         true
       color:        false
-      stylesheets:  []
+      stylesheets:  ['<%= stylesheet_path(:ail) %>']
       locale:       'de-DE'
 
 
