--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -45,7 +45,7 @@ img.float-left {
 }
 .four.columns img.float-right,
 .four.columns img.float-left {
-  max-width: auto !important;
+  max-width: none !important;
 }
 img.float-right {
   margin: 0.375em 0 0.375em 0.8em;
