--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -478,9 +478,11 @@ nav#page_nav {
   width: 100%;
   height: 36px;
   overflow: auto;
-  float: left;
+  position: absolute;
+  top: 0;
+  left: 0;
   padding-left: 5%;
-  background-color: #292929;
+  background: transparent url('/images/ail/heading_bg.png') repeat top left;
   .breadcrumbs {
     float: left;
     overflow-y: hidden;
