working implementation of rendering subpages

--- a/app/views/site_partials/_subpage_content.html.erb
+++ b/app/views/site_partials/_subpage_content.html.erb
@@ -1,4 +1,6 @@
-<% page = (defined?(param_1) ? @cms_page.site.pages.where(id: param_1).first) : @cms_page) || @cms_page %>
+<% page = (defined?(param_1) ? @cms_page.site.pages.where(id: param_1).first : @cms_page) || @cms_page %>
 <% categories = (defined?(param_2) ? param_2 : []) %>
-<% subpages = (categories.empty? ? page.children : page.children.for_category(categories)).select{|p| !p.render_as_page} %>
-<%= subpages.map{|p| render_to_string :inline => p.content, :layout => p.layout}.join("\n") %>
+<% subpages = (categories.empty? ? page.children : page.children.for_category(categories)).select{|p| !p.render_as_page && p.is_published} %>
+<% subpages.each do |subpage| %>
+<%= render :inline => subpage.content %>
+<% end %>
