--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -76,9 +76,11 @@ section {
   div {
     font-size: 1.12em;
   }
+  /*
   header + div {
     font-size: 0.875em;
   }
+  */
   .four.columns,
   .six.columns {
     font-size: 0.75em;
@@ -159,13 +161,6 @@ body section div {
     content: " #{$entypo-icon-fast-forward}";
   }
 }
-/*
-section.slideshow {
-  min-height: 330px;
-  overflow: auto;
-  margin-top: $header_height;
-}
-*/
 
 body #content-top {
   display: block;
@@ -174,6 +169,10 @@ body #content-top {
 
 body #content-top + section.row > div:first-child {
   padding-top: 1.5em;
+}
+
+.clickable {
+  cursor: pointer;
 }
 
 /* Table-Colors */
@@ -613,7 +612,7 @@ section.teaser {
       color: #fff;
     }
   }
-  .twelve, .centered {
+  .centered {
     text-align: center;
   }
 }
@@ -688,6 +687,9 @@ body section:last-child {
       color: $color_one;
     }
   }
+  a:after {
+    content: '';
+  }
 }
 
 body section:last-child {
@@ -695,38 +697,54 @@ body section:last-child {
 }
 
 /* layout for content */
-.row .columns .boxed {
-  li.content-item:before {
+.row .columns .boxed li.content-item:before,
+.row .columns .content-teaser > li:before {
     content: none;
-  }
-  li.content-item {
+}
+.row .columns .boxed li.content-item,
+.row .columns .content-teaser > li {
     position: relative;
     border: 1px solid #000;
     width: 100%;
     height: 180px;
-    overflow: hidden;
     list-style-type: none;
     margin: 0 0 1.5em;
-    padding: 0.33em 1.2em;
+    padding: 0.33em 31% 0.625em 1.2em;
     background-color: #f1f1f1;
     display: block;
     vertical-align: middle;
-    h2,h3,h4,p,ul,li {
+    font-size: 0.75em;
+    .content-wrapper {
+      overflow-y: hidden;
+      height: 100%;
+    }
+    h1, h2,h3,h4,p,ul,li {
       float: left;
     }
-    h2, h3, h4 {
-      font-size: 82.5%;
+    h1 {
+      font-size: 133%;
+    }
+    h2 {
+      font-size: 125%;
+    }
+    h3, h4 {
+      font-size: 112%;
+    }
+    h1, h2, h3, h4 {
       margin-top: 0;
       margin-bottom: 0.33em;
       font-weight: $semibold;
       color: #000;
+      width: 100%;
+      clear: both;
+    }
+    p {
+      font-size: 100%;
     }
     p, ul {
-      width: 62%;
       display: block;
       margin-top: 0;
       clear: left;
-      font-size: 0.75em;
     }
     li {
       float: left;
@@ -742,7 +760,6 @@ body section:last-child {
       top: 0;
       height: 100%;
     }
-  }
 }
 
 
