--- a/app/views/site_partials/navigation/_main_nav.html.erb
+++ b/app/views/site_partials/navigation/_main_nav.html.erb
@@ -11,13 +11,13 @@
       <% @cms_site.pages.root.children.published.subpage(@cms_site.pages.root).each do |page| %>
         <li class="<%= (parents.include?(page.slug)) ? 'active' : '' %>">
             <%= link_to page.label, page_path(page) %>
-            <% unless page.children.published.subpage(page).empty? %>
+            <% unless page.children.published.subpage(page).empty? || page.is_leaf_node %>
             <div class="dropdown">
               <ul class="subnav">
                 <% page.children.published.subpage(page).each do |subpage| %>
                     <li class="<%= (parents.include?(subpage.slug)) ? 'active' : '' %>">
                       <%= link_to subpage.label, page_path(subpage) %>
-                      <% unless subpage.children.published.subpage(subpage).empty? %>
+                      <% unless subpage.children.published.subpage(subpage).empty? || page.is_leaf_node %>
                       <div class="dropdown">
                         <ul class="subnav2">
                         <% subpage.children.published.subpage(subpage).each do |subsubpage| %>
