--- a/app/views/admin/cms/pages/edit.html.haml
+++ b/app/views/admin/cms/pages/edit.html.haml
@@ -1,5 +1,7 @@
 = content_for_ajax :content_messages do
   = link_to pluralize(@page.revisions.count, t('.revision')), admin_cms_site_page_revisions_path(@site, @page), :class => 'btn pull-right'
+  - unless @page.new_record?
+    = link_to t('create_subpage', :scope => 'admin.cms.pages.edit'), new_admin_cms_site_page_path(:site_id => @site.id, :parent_id => @page.id), class: 'btn pull-right'
 
 - content_for :right_column do
   = render 'admin/cms/sites/mirrors', :object => @page
