--- a/app/assets/sass/coruscope.ui.scss.erb
+++ b/app/assets/sass/coruscope.ui.scss.erb
@@ -1,5 +1,7 @@
 #coruscope
-  .navbar
+  .navbar {
+    height: 40px;
+    overflow-y: hidden;
     .brand {
         margin-right: 10%;
         .site-identity {
@@ -12,7 +14,7 @@
             font-weight: bold;
             padding: 2px 5px;
             border-radius: 0.5em;
-      }
+        }
     }
     .nav {
         width: 60%;
@@ -27,6 +29,8 @@
             }
         }
     }
+
+}
   #content {
       min-height: 610px;
   }
