added an image_group partial to display the contents of a group added a hierarchy_path attribute to group to identify it within a hierarchy added fancybox and enabled it on all matching items for AiL

--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -3,6 +3,7 @@
 @import url(//fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
 @import 'gumby/gumby';
 @import 'jquery.bxslider';
+@import 'jquery.fancybox';
 
 $font-family:  'Source Sans Pro', sans-serif !important;
 $body-font-color: #000;
