move page_nav above most other content, but below fancyboxes

--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -449,6 +449,7 @@ nav#page_nav {
   max-width: none;
   float: left;
   height: auto;
+  z-index: 6999;
   /* text-align: center; */
   ul.anchors {
     float: left;
