--- a/app/assets/sass/ail.scss
+++ b/app/assets/sass/ail.scss
@@ -207,6 +207,13 @@ table thead {
   th {
     text-align: left;
   }
+  th:not(:first-child) {
+    text-align: center;
+  }
+}
+table td,
+table th {
+  max-width: 25%; /* two-column tables are half-width */
 }
 table tbody tr td:first-child {
   background-color: #ddeff0;
@@ -345,7 +352,8 @@ header {
     font-weight: $semibold;
     text-decoration: none;
   }
-  a:hover {
+  a:hover,
+  li.active a {
     color: $color_page_bg;
   }
 }
@@ -721,8 +729,7 @@ body section:last-child {
   margin-bottom: 20px;
   padding-right: 4.2%;
 }
-#teaser-group .teaser:nth-child(2),
-#teaser-group .teaser:nth-child(5) {
+#teaser-group .teaser:nth-child(3n+2) {
   margin-left: 2%;
   margin-right: 2%;
 }
@@ -785,20 +792,21 @@ body section:last-child {
     position: relative;
     border: 1px solid #000;
     width: 100%;
-    height: 180px;
+    height: 225px;
     list-style-type: none;
     margin: 0 0 1.5em;
-    padding: 0.33em 31% 0.625em 1.2em;
+    padding: 1.25em 34.25% 1.75em 1.2em;
     background-color: #f1f1f1;
     display: block;
     vertical-align: middle;
-    font-size: 0.75em;
+    font-size: 0.857em;
     .content-wrapper {
       overflow-y: hidden;
       height: 100%;
     }
     h1, h2,h3,h4,p,ul,li {
       float: left;
+      text-align: left;
     }
     h1 {
       font-size: 133%;
@@ -806,7 +814,10 @@ body section:last-child {
     h2 {
       font-size: 125%;
     }
-    h3, h4 {
+    h3 {
+      font-size: 120%;
+    }
+    h4 {
       font-size: 112%;
     }
     h1, h2, h3, h4 {
@@ -827,7 +838,8 @@ body section:last-child {
     }
     li {
       float: left;
-      line-height: 1.25em;
+      line-height: 1.33em;
+      margin-bottom: 0.25em;
       width: auto;
       display: inline-block;
       width: 50%;
@@ -835,7 +847,7 @@ body section:last-child {
     }
     img {
       position: absolute;
-      right: -2px;
+      right: 0;
       top: 0;
       height: 100%;
     }
