--- a/app/views/site_partials/_contact_form.html.erb
+++ b/app/views/site_partials/_contact_form.html.erb
@@ -1,7 +1,7 @@
 <% @cms_form ||= @cms_site.contact_forms.where(identifier: param_1).first %>
 <% @contact ||= @cms_form.build_contact(params.fetch('contact')) %>
 
-<div id="<%= @cms_form.identifier %>-wrapper">
+<div id="<%= @cms_form.identifier %>-wrapper" class="contact-form-wrapper">
   <h3><%= t(@cms_form.identifier, :scope => 'cms.contact_form.title') %></h3>
   <%= formatted_form_for [:cms, @cms_form, @contact], url: cms_contact_form_contacts_url(contact_form_id: @cms_form.id, method: :post), type: :vertical, html: { id: @cms_form.identifier } do |f| %>
       <% @cms_form.contact_fields.each do |field| %>
